fix color contrast for project section

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -431,7 +431,7 @@ ul#nav li.current a { color: #F06000; }
    letter-spacing: 1px;
    text-align: center;
    margin-bottom: 48px;
-   color: #95A3A3;
+   color: #333333;
 }
 
 #portfolio-wrapper {
